cmake_minimum_required(VERSION 3.13)
project(cheaters)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(cheaters
        .idea/cheaters.iml
        .idea/encodings.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/sm_doc_set/sm_doc_set/abf0704.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/abf70402.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/bef1121.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/bgt221.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/bmu5.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/bwa248.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/catchmeifyoucan.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/ckh80.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/ecu201.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/edo14.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/edo20.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/edo26.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/ehc229.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/erk185.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/esv254.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/hal10.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/hte42.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/jrf1109.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/prz100.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/sra107.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/sra119.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/sra126.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/sra31.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/sra42.txt
        cmake-build-debug/sm_doc_set/sm_doc_set/tyc12.txt
        cmake-build-debug/cheaters.cbp
        cmake-build-debug/cheaters.exe
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cheaters.cpp
        cheaters.h
        CMakeLists.txt
        main.cpp)
